# opensandbox

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  HANDOFF.md  Makefile  README.md  build.rs  docker-compose.yml  fly.toml  go.mod  go.sum  index.html  test-preview-urls.ts
.agents/design/: cohort-usage-analysis.md  managed-channels.md  openclaw-image-pull.md  sandbox-session-logs.md  sandbox-tags-and-usage.md
.agents/wip/: snapshot-corruption-stress-test.md
.agents/work/: logship-empty-token-warn.md  sandbox-session-logs-impl.md  sandbox-tags-impl.md
.agents_wip/: docs-plan.md
.github/workflows/: build-openclaw-image.yml  build-worker-ami.yml  ci-gc.yml  deploy-server.yml  deploy-worker.yml  palmer-docs-test.yml  pr-integration.yml  preview-env-destroy.yml  preview-env.yml  publish-python-sdk.yml  publish-ts-sdk.yml  release-cli.yml  test-rust-sdk.yml
benchmarks/: README.md  benchmark_commands.py  benchmark_concurrency.py  benchmark_creation.py  benchmark_files.py  benchmark_workflow.py  quick_test.py  requirements.txt  run_benchmarks.py  sandbox_interface.py
benchmarks/results/: benchmark_20260130_172220.json  benchmark_20260130_172220.md  benchmark_20260130_172241.json  benchmark_20260130_172241.md
ci/persistent/: down.sh  gc.sh  up.sh  verify.sh
ci/pr/: down.sh  up.sh
cloudflare-workers/: schema.sql  schema_phase2.sql  schema_phase2_d1.sql  schema_phase3.sql  schema_phase4.sql  seed_templates.sql
cloudflare-workers/api-edge/: package-lock.json  package.json  wrangler.prod.toml  wrangler.toml
cloudflare-workers/events-ingest/: package-lock.json  package.json  tsconfig.json  wrangler.prod.toml  wrangler.toml
cloudflare-workers/log-tail/: wrangler.prod.toml  wrangler.toml
cloudflare-workers/shared/: credit_account.ts
cmd/agent/: listen_linux.go  listen_other.go  main.go  reaper_linux.go  reaper_other.go
cmd/backfill/: forward.go  main.go
cmd/backfill-disk-overage/: main.go
cmd/capacity-shadow-verify/: main.go
cmd/migrate-prices/: main.go
cmd/oc/: main.go
cmd/seed-dev-secrets/: main.go
cmd/server/: main.go
cmd/worker/: golden_upload.go  main.go
dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json
dashboard/src/: main.tsx
deploy/: Dockerfile.worker  server.env.example  worker.env.example
deploy/aws/: create-aws-dev3.sh
deploy/azure/: .dev-env-secrets.example  bootstrap-worker-identity.sh  create-azure-dev2.sh  create-azure-prod.sh  create-opencomputer-prod.sh  deploy-azure-dev.sh  postgres-backup.sh  setup-azure-host.sh
deploy/dev/: seed_dev.sql
deploy/ec2/: Caddyfile  (+18 more)
docs/: agents.mdx  blobstore-tigris-cutover.md  dev-cutover-runbook.md  docs.json  how-it-works.mdx  index.html  introduction.mdx  mint.json  multi-cloud.md  quickstart.mdx  running-commands.mdx  troubleshooting.mdx  working-with-files.mdx
examples/: test.py  test.ts  test_templates.py  test_templates.ts
proto/: sandbox.proto
scripts/: bench-grpc.sh  bench-heavy.sh  bench-launch.sh  bench-qemu.sh  build-rootfs.sh  download-kernel.sh  infisical-diff-kv.sh  infisical-import-from-kv.sh  install.sh  reliability-test.sh  seed_dev_xcell.sh  stress-snapshot-corruption.ts  test-400-concurrent.sh  test-autoscale.sh  test-hibernation.sh  test-noisy-neighbor.sh  test-preview-urls.sh  test-proxy-secrets.sh  test-secret-store-fork.sh  test-vsock.sh  test-vsock2.sh
sdk/python/: README.md  generate_proto.sh  pyproject.toml
sdk/python/examples/: basic_usage.py
sdk/python/opensandbox/: __init__.py  client.py  exceptions.py  sandbox.py
sdk/python/opensandbox/proto/: __init__.py  sandbox_pb2.py  sandbox_pb2_grpc.py
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: run_all_tests.py  stream_demo.py  test_commands.py  test_concurrent.py  test_declarative_images.py  test_default_template.py  test_disk_size.py  test_domain_tls.py  test_environment.py  test_exec.py  test_file_ops.py  test_large_files.py  test_multi_template.py  test_projects.py  test_python_sdk.py  test_reconnect.py  test_secret_store_fork.py  test_secretstore.py  test_shell.py  test_timeout.py
sdks/python/opencomputer/: __init__.py  agent.py  commands.py  exec.py  filesystem.py  image.py  project.py  pty.py  sandbox.py  shell.py  snapshot.py  sse.py  template.py  usage.py
sdks/python/opensandbox/: __init__.py  sandbox.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/examples/: test_commands.rs  test_file_ops.rs  test_python_sdk.rs
sdks/rust/src/: error.rs  exec.rs  filesystem.rs  lib.rs  sandbox.rs  template.rs
sdks/rust/tests/: smoke.rs
service/: .gitignore  package-lock.json
src/: grpc_server.rs  http_server.rs  main.rs  sandbox.rs  state.rs
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+808 files in other folders)
