[package]
name = "isolate"
version = "0.1.0"
edition = "2021"
description = "Minimal Linux sandbox with HTTP API and gRPC support"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "mount", "sched", "resource", "user", "fs", "signal"] }

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
