[build-system]
requires = ["setuptools>=61.0", "grpcio-tools>=1.60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opensandbox"
version = "0.1.0"
description = "Python SDK for OpenSandbox - High-performance Linux sandbox with gRPC support"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "OpenSandbox Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/opensandbox"
"Bug Tracker" = "https://github.com/yourusername/opensandbox/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["opensandbox*"]

[tool.setuptools.package-data]
opensandbox = ["proto/*.py"]
