[package]
name = "opencomputer"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Rust SDK for OpenComputer - cloud sandbox platform"
license = "MIT"
repository = "https://github.com/diggerhq/opencomputer"
homepage = "https://github.com/diggerhq/opencomputer/tree/main/sdks/rust"
documentation = "https://docs.rs/opencomputer"
readme = "README.md"
keywords = ["sandbox", "opencomputer", "cloud", "containers", "code-execution"]
categories = ["api-bindings", "asynchronous", "development-tools"]

[lib]
name = "opencomputer"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
thiserror = "1"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[[example]]
name = "test_commands"
path = "examples/test_commands.rs"

[[example]]
name = "test_file_ops"
path = "examples/test_file_ops.rs"

[[example]]
name = "test_python_sdk"
path = "examples/test_python_sdk.rs"
